Fix black color and input spacings.

--- a/symphony/assets/css/src/variables.less
+++ b/symphony/assets/css/src/variables.less
@@ -40,7 +40,7 @@
 @black: #121212;
 
 @darker-grey: #3B3D40; // Dark Text
-@dark-grey: #757c84; // Regular Text
+@dark-grey: #657685; // Regular Text
 @grey: #d3dce3; // Light Text
 @light-grey: #B7C2CC; // Light Text
 @lighter-grey: #d3dce2; // Borders
@@ -54,6 +54,7 @@
 	Fonts
 -----------------------------------------------------------------------------*/
 
+@text-shortest: 1.0rem;
 @text-shorter: 1.1rem;
 @text-short: 1.2rem;
 @text-current: 1.4rem;
